[gd_scene load_steps=12 format=3 uid="uid://hd5om4bw8u4d"]

[ext_resource type="Script" uid="uid://cefohburhhyka" path="res://entities/objects/printer/printer.gd" id="1_x44r1"]
[ext_resource type="PackedScene" uid="uid://dg8wuiskfrp51" path="res://other/blender/printer/printer_model.blend" id="2_hvg1i"]
[ext_resource type="PackedScene" uid="uid://uywculwdbd0c" path="res://assets/models/paper/paper2.glb" id="2_mvmy6"]
[ext_resource type="Script" uid="uid://bimigtgxr3x3x" path="res://commons/interactables3D/interactable3D.gd" id="2_oohda"]
[ext_resource type="AudioStream" uid="uid://swf3v1adjij8" path="res://assets/sounds/three_note_odditiy_irdial_loop.ogg" id="5_6c3ww"]

[sub_resource type="BoxShape3D" id="BoxShape3D_oohda"]
size = Vector3(0.625, 0.02, 0.615)

[sub_resource type="Animation" id="Animation_oohda"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.127768, -0.00486302)]
}

[sub_resource type="Animation" id="Animation_x44r1"]
resource_name = "print"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.127768, -0.00486302), Vector3(0, 0.0846174, -0.570691)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oohda"]
_data = {
&"RESET": SubResource("Animation_oohda"),
&"print": SubResource("Animation_x44r1")
}

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hvg1i"]
height = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hvg1i"]
albedo_color = Color(0, 0, 0, 1)
emission_enabled = true
emission_energy_multiplier = 5.0

[node name="Printer" type="Node3D"]
script = ExtResource("1_x44r1")

[node name="printer_model" parent="." instance=ExtResource("2_hvg1i")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.00820839, 0, 0.00446218)

[node name="LastHint" type="Node3D" parent="."]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 0.997105, 0.0760403, 0, -0.0760403, 0.997105, 0, 0.127768, -0.00486302)
visible = false

[node name="paper_model" parent="LastHint" instance=ExtResource("2_mvmy6")]
transform = Transform3D(0.892241, 0, 0, 0, 1, 0, 0, 0, 0.608028, 0, 0, 0)

[node name="Interactable3D" type="Area3D" parent="LastHint"]
collision_layer = 2
collision_mask = 2
script = ExtResource("2_oohda")
metadata/_custom_type_script = "uid://bimigtgxr3x3x"

[node name="CollisionShape3D" type="CollisionShape3D" parent="LastHint/Interactable3D"]
transform = Transform3D(1, 0, 0, 0, 0.999991, -8.34465e-07, 0, 8.34465e-07, 0.999991, 0, 0, 0)
shape = SubResource("BoxShape3D_oohda")

[node name="HintAnim" type="AnimationPlayer" parent="LastHint"]
libraries = {
&"": SubResource("AnimationLibrary_oohda")
}
autoplay = "print"

[node name="AttentionLight" type="MeshInstance3D" parent="."]
transform = Transform3D(0.0646598, 0, 0, 0, 0.0646598, 0, 0, 0, 0.0646598, -0.39972, 0.484239, 0.231284)
mesh = SubResource("CapsuleMesh_hvg1i")
surface_material_override/0 = SubResource("StandardMaterial3D_hvg1i")

[node name="AttentionAudio" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.614872, 0)
stream = ExtResource("5_6c3ww")
volume_db = -5.0
unit_size = 2.0
parameters/looping = true

[connection signal="interacted" from="LastHint/Interactable3D" to="." method="_on_interactable_3d_interacted"]
